<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:padding="15dp">

    <EditText
        android:id="@+id/edMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tvHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_hour"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/tvReminderHour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edMessage" />

    <TextView
        android:id="@+id/tvReminderHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvHour"
        app:layout_constraintTop_toBottomOf="@id/edMessage" />


    <RadioGroup
        android:id="@+id/rgFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHour">

        <RadioButton
            android:id="@+id/rbOnce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rb_once" />

        <RadioButton
            android:id="@+id/rbDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_daily" />

        <RadioButton
            android:id="@+id/rbWeekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_weekly" />
    </RadioGroup>

    <Button
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_date"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/tvReminderDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgFrequency" />

    <TextView
        android:id="@+id/tvReminderDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvDate"
        app:layout_constraintTop_toBottomOf="@id/rgFrequency" />

    <Button
        android:id="@+id/bAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/bDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDate" />

    <Button
        android:id="@+id/bDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bAdd"
        app:layout_constraintTop_toBottomOf="@id/tvDate" />


</androidx.constraintlayout.widget.ConstraintLayout>